<resources>
    <string name="app_name">BricksGame</string>
    <string name="strVoid"></string>
    <string name="STR_START">START</string>
    <string name="strScores">SCORES</string>
    <string name="STR_ZERO">0</string>
    <string name="srtLines">LINES</string>
    <string name="strLevel">LEVEL</string>
    <string name="strRestart">RESTART</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strStart">START GAME</string>
    <string name="strHighScores">HIGH SCORES</string>
    <string name="strSettings">SETTINGS</string>
    <string name="strCredits">ABOUT</string>
    <string name="strNextFigure">NEXT</string>
    <string name="strPlayer">PLAYER</string>
    <string name="strEnterName">ENTER YOUR NAME</string>
    <string name="strPlayerScores">Your scores:</string>
    <string name="strSound">SOUND</string>
    <string name="strNetColour">NETWORK</string>
    <string name="strColorChange">COLOUR</string>
    <string name="strAuthor">WRITTEN BY \nPETER LAPTIK</string>

</resources>
