<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainScreen" android:orientation="horizontal" android:background="@android:color/black"
        android:gravity="center">

    <ImageView
            android:layout_width="297dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/main_logo"
            android:scaleX="0.75" android:scaleY="0.75" android:id="@+id/imageViewLogoH"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:gravity="center">
        <TextView
                android:text="@string/strStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnStartGameH" android:gravity="center"
                app:fontFamily="@font/zxspectrum" android:textSize="18sp" android:layout_marginTop="24dp"/>
        <TextView
                android:text="@string/strSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnSettingsH" android:layout_marginTop="24dp"
                app:fontFamily="@font/zxspectrum" android:textSize="18sp" android:gravity="center"/>
        <TextView
                android:text="@string/strHighScores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnScoresH" android:gravity="center"
                android:textSize="18sp" app:fontFamily="@font/zxspectrum" android:layout_marginTop="24dp"/>
        <TextView
                android:text="@string/strCredits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnCreditsH" android:gravity="center"
                app:fontFamily="@font/zxspectrum" android:layout_marginTop="24dp" android:textSize="18sp"/>
        <TextView
                android:text="@string/strVoid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/hiddenTextH" app:fontFamily="@font/zxspectrum"
                android:layout_marginTop="32dp" android:gravity="center" android:textSize="10sp"/>
    </LinearLayout>
</LinearLayout>