<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainScreen" android:orientation="vertical" android:background="@android:color/black">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:srcCompat="@drawable/main_logo" android:id="@+id/imageView"
            android:scaleX="0.75" android:scaleY="0.75"/>
    <TextView
            android:text="@string/strStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnStartGame" android:gravity="center"
            app:fontFamily="@font/zxspectrum" android:textSize="18sp" android:layout_marginTop="24dp"/>
    <TextView
            android:text="@string/strSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_marginTop="24dp"
            app:fontFamily="@font/zxspectrum" android:textSize="18sp" android:gravity="center"/>
    <TextView
            android:text="@string/strHighScores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView2" android:gravity="center"
            android:textSize="18sp" app:fontFamily="@font/zxspectrum" android:layout_marginTop="24dp"/>
    <TextView
            android:text="@string/strCredits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView4" android:gravity="center"
            app:fontFamily="@font/zxspectrum" android:layout_marginTop="24dp" android:textSize="18sp"/>
</LinearLayout>