<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical"
              android:background="@android:color/background_dark">

    <TextView
            android:text="@string/strSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_marginTop="64dp"
            android:gravity="center" android:textSize="16sp"
            app:fontFamily="@font/zxspectrum" android:layout_marginBottom="16dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="top" android:layout_marginTop="16dp">
        <TextView
                android:text="@string/strSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"
                android:textSize="14sp" app:fontFamily="@font/zxspectrum" android:layout_marginLeft="32dp"/>
        <Switch
                android:text="@string/strVoid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/sndSwitch" android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp" android:layout_gravity="center" android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="16dp">
        <TextView
                android:text="@string/strNetColour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"
                android:layout_marginLeft="32dp" app:fontFamily="@font/zxspectrum" android:textSize="14sp"
                android:layout_marginStart="32dp"/>
        <TextView
                android:text="@string/strColorChange"
                android:layout_width="80dp"
                android:layout_height="wrap_content" android:id="@+id/txtColorChange" android:layout_weight="2"
                app:fontFamily="@font/zxspectrum"/>
        <SeekBar
                android:layout_width="134dp"
                android:layout_height="wrap_content" android:id="@+id/clrSeekBar" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
