<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:id="@+id/layoutGl" android:orientation="horizontal"
              android:gravity="center_vertical|center_horizontal">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="120dp"
            android:layout_height="match_parent" android:layout_marginLeft="16dp"
            android:gravity="center_horizontal">
        <TextView
                android:text="@string/strNextFigure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/txtNextFig" android:gravity="center"
                app:fontFamily="@font/zxspectrum" android:textSize="12sp"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/nextFigureLayout"
                android:gravity="center_horizontal" android:layout_gravity="center_horizontal">
        </LinearLayout>
        <TextView
                android:text="@string/strScores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/labelScores"
                android:textSize="12sp" app:fontFamily="@font/zxspectrum"
                android:gravity="center|center_horizontal|center_vertical"
                android:layout_gravity="center_horizontal|center_vertical"/>
        <TextView
                android:text="@string/STR_ZERO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/txtScores"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="14sp" app:fontFamily="@font/zxspectrum"/>
        <TextView
                android:text="@string/srtLines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/labelLines"
                android:gravity="center_horizontal|center_vertical" android:textSize="12sp"
                app:fontFamily="@font/zxspectrum" android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/STR_ZERO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/txtLines"
                app:fontFamily="@font/zxspectrum" android:gravity="center_horizontal|center_vertical"
                android:textSize="14sp"/>
        <TextView
                android:text="@string/strLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/labelLevel"
                android:gravity="center_horizontal|center_vertical" app:fontFamily="@font/zxspectrum"
                android:textSize="12sp" android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/STR_ZERO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/txtLevel"
                android:gravity="center_horizontal|center_vertical" app:fontFamily="@font/zxspectrum"
                android:textSize="14sp"/>
        <TextView
                android:text="@string/strVoid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/buttonStart" app:fontFamily="@font/zxspectrum"
                android:layout_marginTop="24dp" android:textSize="16sp"
                android:textColor="@android:color/holo_green_light" android:gravity="center"/>
    </LinearLayout>
</LinearLayout>
